--- a/src/main/resources/com/bartek/messenger/FXML-files/SingUpPage.fxml
+++ b/src/main/resources/com/bartek/messenger/FXML-files/SingUpPage.fxml
@@ -7,35 +7,23 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.SignUpPageController">
    <children>
-      <Label layoutX="253.0" layoutY="-1.0" text="Sign up">
+      <Label layoutX="254.0" layoutY="14.0" text="Sign up">
          <font>
             <Font size="25.0" />
          </font>
       </Label>
-      <VBox alignment="TOP_CENTER" layoutX="176.0" layoutY="29.0" prefHeight="300.0" prefWidth="250.0" spacing="20.0">
+      <VBox alignment="TOP_CENTER" layoutX="176.0" layoutY="50.0" prefHeight="250.0" prefWidth="250.0" spacing="20.0">
          <children>
             <TextField fx:id="usernameField" promptText="Username" />
             <PasswordField fx:id="passwordField" promptText="Create Password" />
             <PasswordField fx:id="passwordConfirmationField" promptText="Confirm Password" />
-            <BorderPane prefHeight="25.0" prefWidth="250.0">
-               <left>
-                  <Button mnemonicParsing="false" text="Show" BorderPane.alignment="CENTER" />
-               </left>
-               <center>
-                  <Label text="Strength: " BorderPane.alignment="CENTER" />
-               </center>
-               <right>
-                  <Label text="Weak" BorderPane.alignment="CENTER" />
-               </right>
-            </BorderPane>
-            <Button mnemonicParsing="false" prefHeight="24.0" prefWidth="304.0" text="Sign up">
+            <Button mnemonicParsing="false" onAction="#signUp" prefHeight="24.0" prefWidth="304.0" text="Sign up">
                <font>
                   <Font size="18.0" />
                </font>
@@ -51,6 +39,9 @@
             <Insets top="20.0" />
          </padding>
       </VBox>
-      <Label fx:id="WarningsLabel" layoutX="201.0" layoutY="366.0" prefHeight="20.0" prefWidth="200.0" />
+      <Label fx:id="warningsLabel" layoutX="201.0" layoutY="366.0" prefHeight="20.0" prefWidth="200.0" />
    </children>
+   <padding>
+      <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+   </padding>
 </AnchorPane>
