you can now acces mainPage

--- a/src/main/resources/com/bartek/messenger/FXML-files/mainPage.fxml
+++ b/src/main/resources/com/bartek/messenger/FXML-files/mainPage.fxml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.mainPage.MainPageController.java" />
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.MainPageController">
+   <children>
+      <Pane layoutX="601.0" prefHeight="1080.0" prefWidth="1320.0" />
+      <VBox prefHeight="1080.0" prefWidth="600.0" />
+   </children>
+</AnchorPane>
