--- a/src/main/resources/com/bartek/messenger/FXML-files/mainPage/mainPage.fxml
+++ b/src/main/resources/com/bartek/messenger/FXML-files/mainPage/mainPage.fxml
@@ -1,54 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1015.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.MainPageController">
    <children>
-      <VBox prefWidth="400.0">
-         <children>
-            <VBox fillWidth="false" minHeight="200.0" prefHeight="200.0" prefWidth="100.0" spacing="15.0">
-               <children>
-                  <Label prefHeight="50.0" text="Conversations">
-                     <font>
-                        <Font size="30.0" />
-                     </font>
-                  </Label>
-                  <TextArea prefHeight="40.0" prefWidth="300.0" promptText="Find person">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </TextArea>
-                  <Button mnemonicParsing="false" text="Friends">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Button>
-               </children>
-               <padding>
-                  <Insets left="20.0" top="10.0" />
-               </padding>
-            </VBox>
-            <ScrollPane prefHeight="765.0" prefWidth="400.0" />
-            <HBox minHeight="50.0" prefHeight="50.0" prefWidth="400.0">
-               <children>
-                  <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="90.0" text="Profile">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                  </Button>
-               </children>
-            </HBox>
-         </children></VBox>
+      <fx:include source="leftPanel.fxml" />
+      <fx:include layoutX="400.0" source="mainPanel.fxml" />
    </children>
 </AnchorPane>
