--- a/src/main/resources/com/bartek/messenger/FXML-files/main/leftPanel.fxml
+++ b/src/main/resources/com/bartek/messenger/FXML-files/main/leftPanel.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefWidth="400.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.LeftPanelController">
+<VBox prefWidth="400.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.mainPage.LeftPanelController">
    <children>
       <VBox fillWidth="false" minHeight="200.0" prefHeight="200.0" prefWidth="100.0" spacing="15.0">
          <children>
@@ -23,7 +23,7 @@
                   <Font size="16.0" />
                </font>
             </TextArea>
-            <Button mnemonicParsing="false" text="Friends">
+            <Button mnemonicParsing="false" onAction="#loadFriendsPage" text="Friends">
                <font>
                   <Font size="16.0" />
                </font>
@@ -36,7 +36,7 @@
       <ScrollPane prefHeight="765.0" prefWidth="400.0" />
       <HBox minHeight="50.0" prefHeight="50.0" prefWidth="400.0">
          <children>
-            <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="90.0" text="Profile">
+            <Button mnemonicParsing="false" onAction="#displayProfile" prefHeight="50.0" prefWidth="90.0" text="Profile">
                <font>
                   <Font size="20.0" />
                </font>
