--- a/src/main/resources/com/bartek/messenger/FXML-files/main/friendsPage.fxml
+++ b/src/main/resources/com/bartek/messenger/FXML-files/main/friendsPage.fxml
@@ -1,8 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="1015.0" prefWidth="1520.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.mainPage.MainPanelController">
-
+<AnchorPane prefHeight="1015.0" prefWidth="1420.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.mainPage.MainPanelController">
+   <children>
+      <Pane layoutX="40.0" prefHeight="50.0" prefWidth="1420.0">
+         <children>
+            <Label alignment="CENTER" prefHeight="50.0" prefWidth="150.0" text="Friends">
+               <font>
+                  <Font size="40.0" />
+               </font>
+            </Label>
+            <HBox alignment="CENTER_RIGHT" layoutX="160.0" prefHeight="50.0" spacing="40.0">
+               <children>
+                  <Button mnemonicParsing="false" prefWidth="130.0" text="Avaible">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" prefWidth="130.0" text="All">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" prefWidth="130.0" text="Waiting">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" prefWidth="130.0" text="Blocked">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" prefWidth="130.0" text="Add friend">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Button>
+               </children>
+               <padding>
+                  <Insets left="40.0" />
+               </padding>
+            </HBox>
+         </children>
+         <padding>
+            <Insets left="40.0" />
+         </padding>
+      </Pane>
+   </children>
 </AnchorPane>
