--- a/src/main/resources/com/bartek/messenger/FXML-files/main/conversationPage.fxml
+++ b/src/main/resources/com/bartek/messenger/FXML-files/main/conversationPage.fxml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 
@@ -28,14 +32,40 @@
             </Label>
          </children>
       </Pane>
-      <SplitPane dividerPositions="0.8" layoutX="50.0" layoutY="50.0" prefHeight="915.0" prefWidth="1370.0">
+      <SplitPane dividerPositions="0.75" layoutX="50.0" layoutY="50.0" prefHeight="915.0" prefWidth="1370.0">
          <items>
-            <ScrollPane prefHeight="200.0" prefWidth="200.0">
+            <ScrollPane minHeight="915.0" prefHeight="915.0" prefWidth="200.0">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
               </content>
             </ScrollPane>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" />
+            <AnchorPane prefHeight="200.0" prefWidth="200.0">
+               <children>
+                  <VBox prefHeight="200.0" prefWidth="339.0">
+                     <children>
+                        <Label alignment="CENTER" prefHeight="80.0" prefWidth="339.0" text="Tfuj stary pijany 3000">
+                           <font>
+                              <Font size="26.0" />
+                           </font>
+                        </Label>
+                        <HBox alignment="CENTER" prefHeight="120.0" spacing="50.0">
+                           <children>
+                              <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="100.0" text="Profile">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Button>
+                              <CheckBox mnemonicParsing="false" onAction="#muteFriend" prefHeight="50.0" prefWidth="100.0" text="Mute">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </CheckBox>
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+               </children>
+            </AnchorPane>
          </items>
       </SplitPane>
    </children>
