--- a/src/main/resources/com/bartek/messenger/FXML-files/main/main.fxml
+++ b/src/main/resources/com/bartek/messenger/FXML-files/main/main.fxml
@@ -4,7 +4,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1015.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.mainPage.MainController">
    <children>
-      <fx:include source="leftPanel.fxml" />
+      <fx:include fx:id="leftPanel" source="leftPanel.fxml" />
       <fx:include layoutX="400.0" source="conversationPage.fxml" />
    </children>
 </AnchorPane>
