--- a/src/main/resources/com/bartek/messenger/FXML-files/main/conversationPage.fxml
+++ b/src/main/resources/com/bartek/messenger/FXML-files/main/conversationPage.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<AnchorPane prefHeight="1015.0" prefWidth="1420.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.mainPage.conversationPageController">
+<AnchorPane prefHeight="1015.0" prefWidth="1420.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.main.conversationPageController">
    <children>
       <Pane prefHeight="50.0" prefWidth="1420.0">
          <children>
