--- a/src/main/resources/com/bartek/messenger/FXML-files/main/friendsListPage.fxml
+++ b/src/main/resources/com/bartek/messenger/FXML-files/main/friendsListPage.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="985.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.mainPage.FriendsListPageController">
+<AnchorPane prefHeight="985.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.main.FriendsListPageController">
    <children>
       <TextField layoutX="50.0" layoutY="20.0" prefWidth="900.0" promptText="Search">
          <font>
