--- a/src/main/resources/com/bartek/messenger/FXML-files/main/leftPanel.fxml
+++ b/src/main/resources/com/bartek/messenger/FXML-files/main/leftPanel.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefWidth="400.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.mainPage.LeftPanelController">
+<VBox prefWidth="400.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.main.LeftPanelController">
    <children>
       <VBox fillWidth="false" minHeight="200.0" prefHeight="200.0" prefWidth="100.0" spacing="15.0">
          <children>
