--- a/src/main/resources/com/bartek/messenger/FXML-files/main/conversationPage.fxml
+++ b/src/main/resources/com/bartek/messenger/FXML-files/main/conversationPage.fxml
@@ -12,12 +12,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="1015.0" prefWidth="1420.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.main.conversationPageController">
    <children>
       <Pane prefHeight="50.0" prefWidth="1420.0">
          <children>
-            <Label fx:id="usernameLabel" prefHeight="50.0" prefWidth="400.0" text="Tfuj stary pijany 3000">
+            <Label fx:id="usernameLabel" prefHeight="50.0" prefWidth="400.0" text="Friend Name here">
                <font>
                   <Font size="28.0" />
                </font>
@@ -25,7 +24,7 @@
                   <Insets left="50.0" />
                </padding>
             </Label>
-            <Label fx:id="activityLabel" layoutX="410.0" prefHeight="50.0" prefWidth="400.0" text="Last active 5 years ago">
+            <Label fx:id="activityLabel" layoutX="410.0" prefHeight="50.0" prefWidth="400.0" text="Last active some time ago">
                <font>
                   <Font size="28.0" />
                </font>
@@ -43,7 +42,7 @@
                <children>
                   <VBox prefHeight="200.0" prefWidth="339.0">
                      <children>
-                        <Label alignment="CENTER" prefHeight="80.0" prefWidth="339.0" text="Tfuj stary pijany 3000">
+                        <Label alignment="CENTER" prefHeight="80.0" prefWidth="339.0" text="Friend name here">
                            <font>
                               <Font size="26.0" />
                            </font>
