--- a/src/main/resources/com/bartek/messenger/FXML-files/main/mainPage.fxml
+++ b/src/main/resources/com/bartek/messenger/FXML-files/main/mainPage.fxml
@@ -4,6 +4,6 @@
 
 <AnchorPane fx:id="anchorPane" prefHeight="1015.0" prefWidth="1420.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.main.MainPageController">
    <children>
-      <fx:include source="conversationPage.fxml" />
+      <fx:include source="subPages/conversationPage.fxml" />
    </children>
 </AnchorPane>
