--- a/src/main/resources/com/bartek/messenger/FXML-files/main/main.fxml
+++ b/src/main/resources/com/bartek/messenger/FXML-files/main/main.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1015.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.main.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1015.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.controllers.mainPage.MainController">
    <children>
       <fx:include fx:id="leftPanel" source="leftPanel.fxml" />
       <fx:include layoutX="400.0" fx:id="mainPage" source="mainPage.fxml" />
