--- a/src/main/resources/com/bartek/messenger/FXML-files/main/subPages/conversationPage.fxml
+++ b/src/main/resources/com/bartek/messenger/FXML-files/main/subPages/conversationPage.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="1015.0" prefWidth="1420.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.main.ConversationPageController">
+<AnchorPane prefHeight="1015.0" prefWidth="1420.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.controllers.mainPage.subPages.ConversationPageController">
    <children>
       <Pane prefHeight="50.0" prefWidth="1420.0">
          <children>
