--- a/src/main/resources/com/bartek/messenger/FXML-files/main/subPages/profilePage.fxml
+++ b/src/main/resources/com/bartek/messenger/FXML-files/main/subPages/profilePage.fxml
@@ -1,15 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="1015.0" prefWidth="1420.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.controllers.mainPage.subPages.ProfilePageController">
    <children>
-      <Label fx:id="usernameLabel" alignment="CENTER" prefHeight="50.0" prefWidth="1420.0" text="User name here">
+      <VBox prefHeight="200.0" prefWidth="1420.0">
+         <children>
+            <Label fx:id="usernameLabel" alignment="CENTER" prefHeight="50.0" prefWidth="1420.0" text="User name here">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" prefHeight="50.0" prefWidth="1420.0" text="Has account since Date">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" prefHeight="50.0" prefWidth="1420.0" text="About User">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
+      <TextArea editable="false" layoutY="200.0" prefHeight="600.0" prefWidth="1420.0" text="Nothing here yet">
          <font>
-            <Font size="30.0" />
+            <Font size="23.0" />
          </font>
-      </Label>
+      </TextArea>
    </children>
 </AnchorPane>
