--- a/src/main/resources/com/bartek/messenger/FXML-files/main/subPages/addFriendPage.fxml
+++ b/src/main/resources/com/bartek/messenger/FXML-files/main/subPages/addFriendPage.fxml
@@ -7,22 +7,21 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="985.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bartek.messenger.controllers.mainPage.subPages.AddFriendPageController">
    <children>
-      <VBox alignment="TOP_CENTER" prefHeight="400.0" prefWidth="1000.0" spacing="50.0">
+      <VBox alignment="TOP_CENTER" fillWidth="false" prefHeight="400.0" prefWidth="1000.0" spacing="50.0">
          <children>
             <Label alignment="CENTER" prefWidth="1000.0" text="Add Friend">
                <font>
                   <Font size="30.0" />
                </font>
             </Label>
-            <TextField prefHeight="40.0" prefWidth="600.0" promptText="Find person">
+            <TextField fx:id="searchBar" prefHeight="40.0" prefWidth="600.0" promptText="Find person">
                <font>
                   <Font size="20.0" />
                </font>
             </TextField>
-            <Button mnemonicParsing="false" text="Send Friend Request">
+            <Button mnemonicParsing="false" onAction="#sendFriendRequest" text="Send Friend Request">
                <font>
                   <Font size="15.0" />
                </font>
